<resources>
    <string name="app_name">SeniorProject-HospitalApp</string>

    <!-- login page strings -->
    <string name="loginbutton">Log In</string>
    <string name="email">Enter Email</string>
    <string name="username"></string>
    <string name="usernamewatermark">Username</string>
    <string name="password">Enter Paswword</string>
    <string name="passwordwatermark">Password</string>
    <string name="signin">Do not have an account? Sign In</string>

    <!--Registration page -->
    <string name="register">Register to create an account.</string>
    <string name="name">Full Name</string>
    <string name="fullnamewatermark">First Last Name</string>
    <string name="regemail">Email</string>
    <string name="emailwatermark">Email</string>
    <string name="regpassword">Password</string>
    <string name="regpasswatermark">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="confirmpasswatermark">Confirm Password</string>
    <string name="regbutton">Register</string>
    <string name="gotologin"> Already have an account? Login!</string>

    <!--Home Page -->
    <string name="welcomeMessage">Welcome to your dashboard</string>
    <string name="logoutButton">Log Out</string>

    <!--right toggle menu-->
    <string name="settings">Settings</string>

    <!--Settings page-->
    <string name="updateprofile">Update Profile</string>
    <string name="phonenum">Phone no.</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>