<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage">

    <TextView
        android:id="@+id/t_register"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textColor="@color/headings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/t_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/t_name"
        android:layout_width="221dp"
        android:layout_height="30dp"
        android:layout_marginBottom="6dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/e_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/e_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/fullnamewatermark"
        android:ems="10"
        android:hint="@string/fullnamewatermark"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/t_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_email"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="6dp"
        android:text="@string/regemail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/e_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/e_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/emailwatermark"
        android:ems="10"
        android:hint="@string/emailwatermark"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/t_regpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_regpassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="6dp"
        android:text="@string/regpassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/e_regpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/e_regpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/regpasswatermark"
        android:ems="10"
        android:hint="@string/regpasswatermark"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/t_confrimpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_confrimpass"
        android:layout_width="219dp"
        android:layout_height="30dp"
        android:layout_marginBottom="6dp"
        android:text="@string/confirmpass"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/e_confrimpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/e_confrimpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="@string/confirmpasswatermark"
        android:ems="10"
        android:hint="@string/confirmpasswatermark"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/b_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/regbutton"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/t_gotologin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_gotologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/gotologin"
        android:textColor="@color/links"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>